--- a/index.html
+++ b/index.html
@@ -109,6 +109,75 @@
         customers.</p>
     </div>
   </section>
+  <section class="popular-foods" id="menu">
+    <h2 class="popular-foods__title">Popular Food India</h2>
+    <div class="popular-foods__filters sushi__hide-scrollbar">
+      <button class="popular-foods__filter-btn active">
+        All
+      </button>
+      <button class="popular-foods__filter-btn">
+        <img src="/assets/sushi-9.png" alt="sushi-9" /> Ramen
+      </button>
+      <button class="popular-foods__filter-btn">
+        <img src="/assets/sushi-8.png" alt="sushi-9" /> Udon
+      </button>
+      <button class="popular-foods__filter-btn">
+        <img src="/assets/sushi-7.png" alt="sushi-9" />Danggo
+      </button>
+      <button class="popular-foods__filter-btn">
+        <img src="/assets/sushi-6.png" alt="sushi-9" /> Sushi
+      </button>
+      <button class="popular-foods__filter-btn ">
+        All
+      </button>
+    </div>
+    <div class="popular-foods__catalogue">
+      <article class="popular-foods__card">
+        <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12" />
+        <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star" />
+            <p>4.9</p>
+          </div>
+
+          <p class="popular-foods__card-price">$21.00</p>
+
+        </div>
+      </article>
+      <article class="popular-foods__card active-card">
+        <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-12" />
+        <h4 class="popular-foods__card-title">Original Sushi</h4>
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star" />
+            <p>4.9</p>
+          </div>
+
+          <p class="popular-foods__card-price">$21.00</p>
+
+        </div>
+      </article>
+      <article class="popular-foods__card ">
+        <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-12" />
+        <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star" />
+            <p>4.9</p>
+          </div>
+
+          <p class="popular-foods__card-price">$21.00</p>
+
+        </div>
+      </article> 
+    </div>
+    <button class="popular-foods__button">
+      Explore Foods
+      <img src="assets/arrow-right.svg" alt="arrow" />
+    </button>
+
+  </section>
   <script type="module" src="/js/script.js"></script>
 </body>
 
