--- a/index.html
+++ b/index.html
@@ -359,7 +359,15 @@
   </footer>
 
 
-  <script src="js/script.js" type="module"></script>
+  <script src="js/script.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000,
+    offset: 100,
+  });
+</script>
 </body>
 
 </html>
