Change AOS animation from flip-up to flip-left

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
   </section>
 
-  <section class="popular-foods" id="menu" data-aos="flip-up">
+  <section class="popular-foods" id="menu" data-aos="flip-left">
     <h2 class="popular-foods__title" data-aos="flip-up">Popular Food / 人気</h2>
 
     <div class="popular-foods__filters sushi__hide-scrollbar" data-aos="fade-up">
@@ -367,7 +367,6 @@
     duration: 1000,
     offset: 100,
     once: true,
-    anchorPlacement: 'top-bottom'
   });
 </script>
 
